# restapi_exam

./: pyproject.toml  requirements.txt
app/: db.sqlite3
app/config/: settings.py  urls.py
app/snippets/: models.py  serializers.py  urls.py  views.py
app/snippets/migrations/: 0001_initial.py
