[tool.poetry]
name = "restapi"
version = "0.1.0"
description = ""
authors = ["hyeonggeun2 <dhgudrms12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "<3.0"
djangorestframework = "^3.11.0"
django-filter = "^2.2.0"
pygments = "^2.5.2"
django-extensions = "^2.2.6"
httpie = "^2.0.0"

[tool.poetry.dev-dependencies]
ipython = "^7.16.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
